@@ -1,6 +1,7 @@
 *** Changelog ***
 
 = 9.1.0 - xxxx-xx-xx =
+* Tweak - Add the transaction limit information to the Afterpay/Clearpay method when listing payment methods.
 * Tweak - Add transaction threshold information to Affirm when listing payment methods.
 * Fix - Handles additional fields when checking out using ECE on the block checkout.
 * Dev - Introduces new payment method name constants for the frontend.
